# schnorr_hash_err

./: Cargo.toml
src/: main.rs
